--- a/app/src/main/res/layout-large/activity_testitem.xml
+++ b/app/src/main/res/layout-large/activity_testitem.xml
@@ -7,9 +7,8 @@
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="160dp"
-        android:elevation="5dp"
-        android:padding="2dp"
+        android:layout_height="180dp"
+        android:padding="1dp"
         app:cardElevation="5dp"
         app:cardUseCompatPadding="true">
 
@@ -18,6 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="top"
+            android:padding="6dp"
             android:orientation="vertical">
 
             <LinearLayout
@@ -82,103 +82,163 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:weightSum="10">
+                        android:orientation="horizontal">
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:gravity="center"
                             android:text="Practice Test"
-                            android:textSize="20dp"
-                            android:layout_weight="6"/>
+                            android:textSize="20sp" />
 
                         <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
+                            android:layout_width="28dp"
+                            android:layout_height="28dp"
                             android:gravity="center"
-                            android:layout_weight="4"
+                            android:layout_gravity="center"
                             android:layout_marginEnd="5sp"
+                            android:textColor="@color/white"
+                            android:background="@drawable/number_skipped"
                             android:id="@+id/tv_testAttempt"
-                            android:textSize="12dp" />
+                            android:textSize="12sp" />
 
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            android:layout_gravity="center"
+                            android:layout_marginStart="10dp"
+                            android:weightSum="2">
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:layout_weight="1">
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="center_horizontal|top"
+                                    android:textSize="15sp"
+                                    android:layout_marginEnd="8dp"
+                                    android:text="Max:" />
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="center_horizontal|top"
+                                    android:textSize="15sp"
+                                    android:textColor="@color/green"
+                                    android:id="@+id/tv_attempt_max" />
+                            </LinearLayout>
+
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:layout_weight="1">
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="center_horizontal|top"
+                                    android:textSize="15sp"
+                                    android:layout_marginEnd="8dp"
+                                    android:text="Min:" />
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="center_horizontal|top"
+                                    android:textSize="15sp"
+                                    android:textColor="@color/green"
+                                    android:id="@+id/tv_attempt_min" />
+                            </LinearLayout>
+
+
+                        </LinearLayout>
 
 
                     </LinearLayout>
 
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:weightSum="4">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:gravity="center_horizontal|top"
-                            android:layout_weight="1"
-                            android:textSize="15sp"
-                            android:text="Max:" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:gravity="center_horizontal|top"
-                            android:layout_weight="1"
-                            android:textSize="15sp"
-                            android:id="@+id/tv_attempt_max" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:gravity="center_horizontal|top"
-                            android:layout_weight="1"
-                            android:textSize="15sp"
-                            android:text="Min:" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:gravity="center_horizontal|top"
-                            android:layout_weight="1"
-                            android:textSize="15sp"
-                            android:id="@+id/tv_attempt_min" />
-
-                    </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:orientation="horizontal"
                         android:layout_gravity="bottom"
-                        android:weightSum="2">
+                        android:layout_marginTop="10dp"
+                        android:weightSum="3">
 
-                        <Button
-                            android:id="@+id/btn_pstart"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginEnd="2dp"
-                            android:layout_weight="1"
-                            android:layout_gravity="bottom"
-                            android:background="@drawable/custom_button"
-                            android:text="Start"
-                            android:textColor="@drawable/custom_text" />
-
-                        <Button
-                            android:id="@+id/btn_review"
+                        <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:layout_gravity="bottom"
-                            android:background="@drawable/custom_button"
-                            android:text="Review"
-                            android:textColor="@drawable/custom_text" />
+                            android:orientation="vertical">
+
+                            <ImageView
+                                android:id="@+id/iv_start"
+                                android:layout_width="35dp"
+                                android:layout_height="35dp"
+                                android:layout_marginEnd="2dp"
+                                android:layout_gravity="center"
+                                android:src="@drawable/play" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:text="Start" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:orientation="vertical">
+
+                        <ImageView
+                            android:id="@+id/iv_resume"
+                            android:layout_width="35dp"
+                            android:layout_height="35dp"
+                            android:layout_gravity="center"
+                            android:src="@drawable/resume"/>
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:text="Resume" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:orientation="vertical">
+
+                        <ImageView
+                            android:id="@+id/iv_review"
+                            android:layout_width="35dp"
+                            android:layout_height="35dp"
+                            android:layout_gravity="center"
+                            android:src="@drawable/review"/>
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:text="Review" />
+                        </LinearLayout>
+
                     </LinearLayout>
+
                 </LinearLayout>
+
                 <com.github.mikephil.charting.charts.PieChart
-                    android:layout_width="140dp"
-                    android:layout_height="140dp"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
                     android:id="@+id/test_piechart">
 
                 </com.github.mikephil.charting.charts.PieChart>
@@ -201,9 +261,10 @@
                     android:orientation="vertical">
 
                     <TextView
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:gravity="center_horizontal"
+                        android:gravity="center"
+                        android:textSize="20sp"
                         android:text="Flash Card" />
 
                     <LinearLayout android:layout_width="match_parent"
@@ -211,110 +272,26 @@
                         android:orientation="horizontal"
                         android:weightSum="2">
 
-                        <Button
-                            android:id="@+id/btn_fstart"
-                            android:layout_width="match_parent"
+                        <ImageView
+                            android:id="@+id/iv_fstart"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="bottom"
                             android:layout_weight="1"
                             android:background="@drawable/custom_button"
-                            android:text="Start"
                             android:textColor="@drawable/custom_text" />
                     </LinearLayout>
 
                 </LinearLayout>
                 <com.github.mikephil.charting.charts.PieChart
-                    android:layout_width="140dp"
-                    android:layout_height="140dp"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
                     android:id="@+id/flash_piechart">
 
                 </com.github.mikephil.charting.charts.PieChart>
 
             </LinearLayout>
         </LinearLayout>
-
-
-        <!--        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1">
-
-            <Button
-                android:id="@+id/btn_teststart"
-                android:layout_width="wrap_content"
-                android:layout_height="35dp"
-                android:textColor="#000000"
-                android:background="@drawable/btn_shape"
-                android:text="play"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1">
-
-            <Button
-                android:id="@+id/btn_testresume"
-                android:layout_width="wrap_content"
-                android:layout_height="35dp"
-                android:textColor="#000000"
-                android:background="@drawable/btn_shape"
-                android:text="Review"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1">
-
-            <CheckBox
-                android:id="@+id/cb_testselection"
-                android:layout_width="wrap_content"
-                android:layout_height="35dp" />
-
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/tv_teststatus"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="teststatus"
-            android:gravity="center_vertical"
-            android:textColor="#000000"
-            android:layout_weight="1"
-            android:textSize="14dp"/>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1">
-
-            <Button
-                android:id="@+id/btn_fteststart"
-                android:layout_width="wrap_content"
-                android:layout_height="35dp"
-                android:textColor="#000000"
-                android:background="@drawable/btn_shape"
-                android:text="Start"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1">
-
-            <Button
-                android:id="@+id/btn_fattempthistory"
-                android:layout_width="wrap_content"
-                android:layout_height="35dp"
-                android:textColor="#000000"
-                android:background="@drawable/btn_shape"
-                android:text="History"/>
-
-        </LinearLayout>-->
 
     </android.support.v7.widget.CardView>
 
