--- a/app/src/main/res/layout/activity_enrollitem.xml
+++ b/app/src/main/res/layout/activity_enrollitem.xml
@@ -38,9 +38,9 @@
                 android:id="@+id/btn_start"
                 android:layout_width="wrap_content"
                 android:layout_height="35dp"
-                android:textColor="#000000"
-                android:background="@drawable/btn_shape"
-                android:text="start"/>
+                android:background="@drawable/custom_button"
+                android:textColor="@drawable/custom_text"
+                android:text="Start"/>
 
         </LinearLayout>
     </LinearLayout>
