--- a/app/src/main/res/layout/activity_score.xml
+++ b/app/src/main/res/layout/activity_score.xml
@@ -460,23 +460,7 @@
                                 android:gravity="center"
                                 android:textSize="20sp"
                                 android:textColor="@android:color/black"
-                                android:text="Category"/>
-
-                            <View
-                                android:layout_width="2dp"
-                                android:layout_height="match_parent"
-                                android:layout_marginStart="2dp"
-                                android:layout_marginEnd="2dp"
-                                android:background="#000000" />
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:gravity="center"
-                                android:textSize="20sp"
-                                android:textColor="@android:color/black"
-                                android:text="SubCat"/>
+                                android:text="Sections"/>
 
                             <View
                                 android:layout_width="2dp"
