--- a/app/src/main/res/layout-large/activity_assesmenttestitem.xml
+++ b/app/src/main/res/layout-large/activity_assesmenttestitem.xml
@@ -15,7 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="testid"
-            android:gravity="center_vertical"
+            android:layout_gravity="center_vertical"
             android:textColor="#000000"
             android:layout_weight="1"
             android:textSize="16dp"/>
@@ -28,7 +28,7 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/iv_resume"
+                android:id="@+id/iv_start"
                 android:layout_width="35dp"
                 android:layout_height="35dp"
                 android:layout_gravity="center"
@@ -64,14 +64,15 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="2">
+            android:layout_weight="1"
+            android:weightSum="2">
 
             <TextView
                 android:id="@+id/tv_ateststatus"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="teststatus"
-                android:gravity="center_vertical"
+                android:layout_gravity="center_vertical"
                 android:textColor="#000000"
                 android:layout_weight="1"
                 android:textSize="12dp"/>
