--- a/app/src/main/res/layout/activity_assesmenttestitem.xml
+++ b/app/src/main/res/layout/activity_assesmenttestitem.xml
@@ -15,62 +15,77 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="testid"
-            android:gravity="center_vertical"
+            android:layout_gravity="center_vertical"
             android:textColor="#000000"
             android:layout_weight="1"
             android:textSize="16dp"/>
 
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:orientation="vertical">
 
-            <Button
-                android:id="@+id/btn_ateststart"
-                android:layout_width="wrap_content"
+            <ImageView
+                android:id="@+id/iv_start"
+                android:layout_width="35dp"
                 android:layout_height="35dp"
-                android:textColor="#000000"
-                android:background="@drawable/btn_shape"
-                android:text="play"/>
+                android:layout_gravity="center"
+                android:src="@drawable/play"/>
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Play" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:orientation="vertical">
 
-            <Button
-                android:id="@+id/btn_atestresume"
-                android:layout_width="wrap_content"
+            <ImageView
+                android:id="@+id/iv_review"
+                android:layout_width="35dp"
                 android:layout_height="35dp"
-                android:textColor="#000000"
-                android:background="@drawable/btn_shape"
-                android:text="Review"/>
+                android:layout_gravity="center"
+                android:src="@drawable/review"/>
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Review" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:weightSum="2">
 
-            <CheckBox
+            <TextView
+                android:id="@+id/tv_ateststatus"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="teststatus"
+                android:layout_gravity="center"
+                android:textColor="#000000"
+                android:layout_weight="1"
+                android:textSize="12dp"/>
+
+            <ImageView
                 android:id="@+id/cb_atestselection"
                 android:layout_width="wrap_content"
-                android:layout_height="35dp" />
+                android:layout_height="35dp"
+                android:layout_weight="1"
+                android:src="@drawable/ic_file_download_black_36dp" />
 
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/tv_ateststatus"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="teststatus"
-            android:gravity="center_vertical"
-            android:textColor="#000000"
-            android:layout_weight="1"
-            android:textSize="12dp"/>
 
     </LinearLayout>
 
