--- a/app/src/main/res/layout/activity_score.xml
+++ b/app/src/main/res/layout/activity_score.xml
@@ -563,7 +563,14 @@
             android:layout_height="wrap_content"
             android:text="OK" />
 
-    </LinearLayout>
+                <Button
+                    android:id="@+id/btn_details"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="dra"
+                    android:text="Details >>" />
+
+            </LinearLayout>
 
         </LinearLayout>
     </ScrollView>
