--- a/app/src/main/res/layout/activity_testpopup.xml
+++ b/app/src/main/res/layout/activity_testpopup.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="400sp">
+    android:layout_width="600dp"
+    android:layout_height="300sp"
+    android:background="@color/white">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -11,14 +12,25 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_margin="16dp"
+            android:id="@+id/ll_practise"
             android:layout_weight="1"
-            android:orientation="horizontal">
+            android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="300dp"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical|center_horizontal"
+                android:src="@drawable/practicetest"
+                android:layout_weight="1"/>
 
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Practise"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical|center_horizontal"
+                android:layout_weight="1"
+                android:text="Practise Tests"
                 android:textStyle="bold"
                 android:textSize="22sp"
                 android:textColor="@color/green"/>
@@ -29,18 +41,29 @@
             android:layout_width="0.1dip"
             android:layout_height="match_parent"
             android:background="#000000"
-            android:layout_margin="2dp"/>
+            android:layout_marginBottom="20dp"
+            android:layout_marginTop="20dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_margin="16dp"
+            android:id="@+id/ll_assessment"
             android:layout_weight="1"
-            android:orientation="horizontal">
+            android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="200dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:src="@drawable/assessmenttest" />
 
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Assessment"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center_vertical|center_horizontal"
+                android:text="Assessment Tests"
                 android:textStyle="bold"
                 android:textSize="22sp"
                 android:textColor="@color/green"/>
